Add Prysm from source build setup
- Add build-prysm-docker.sh to build Prysm from source in Docker
- Add docker-compose-prysm-local.yml for custom-built Prysm
- Add prysm submodule (prysmaticlabs/prysm)
- Add QUICK-START.md with detailed instructions
- Update README.md with build-from-source workflow
- Clean up redundant documentation files

Features:
- Build Prysm beacon-chain and validator from source
- Full control over consensus layer implementation
- Easy modification and testing workflow
- Clean restart support to avoid sync issues

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "interfaces"]
 	path = node/interfaces
 	url = https://github.com/erigontech/interfaces
+[submodule "prysm"]
+	path = prysm
+	url = https://github.com/prysmaticlabs/prysm.git
