Fix: Resolve block 66 stuck issue by setting proper genesis EIP-1559/4844 values
- Set baseFeePerGas to 0x3b9aca00 (1 Gwei) instead of null
- Set excessBlobGas to 0x0 instead of null
- Set blobGasUsed to 0x0 instead of null
- Change SECONDS_PER_SLOT to 6 for faster testing
- Add engine-endpoint-timeout-seconds=30 to beacon config

The null values in genesis.json were causing Erigon's block builder to hang
at block 66 due to improper base fee calculations. This fix ensures proper
EIP-1559 (London) and EIP-4844 (Cancun) initialization.

--- a/docker-compose-private.yml
+++ b/docker-compose-private.yml
@@ -42,6 +42,7 @@ services:
       - --rpc-host=0.0.0.0
       - --grpc-gateway-host=0.0.0.0
       - --verbosity=info
+      - --engine-endpoint-timeout-seconds=30
     ports:
       - "4000:4000"
       - "3500:3500"
