feat: Update HotStuff configuration for real block production
- Fixed consensus-hotstuff.yml structure (removed nested consensus: wrapper)
- Updated docker-compose-hotstuff.yml with consensus mode flags
- Configuration now properly loads and HotStuff produces real blocks

Verified: System producing blocks successfully with HotStuff consensus

--- a/docker-compose-hotstuff.yml
+++ b/docker-compose-hotstuff.yml
@@ -50,6 +50,8 @@ services:
       - --grpc-gateway-host=0.0.0.0
       - --verbosity=info
       - --engine-endpoint-timeout-seconds=30
+      - --consensus-mode=hotstuff
+      - --consensus-config=/config/consensus-hotstuff.yml
     ports:
       - "4000:4000"
       - "3500:3500"
