chore: Update Prysm submodule to point to darigaaz86/prysm fork
- Changed submodule URL to https://github.com/darigaaz86/prysm.git
- Set branch to develop (contains HotStuff implementation)
- Includes 7 commits with complete HotStuff consensus integration

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,5 @@
 	url = https://github.com/erigontech/interfaces
 [submodule "prysm"]
 	path = prysm
-	url = https://github.com/prysmaticlabs/prysm.git
+	url = https://github.com/darigaaz86/prysm.git
+	branch = develop
