--- a/config/config-optimized.yml
+++ b/config/config-optimized.yml
@@ -1,4 +1,4 @@
-CONFIG_NAME: private-chain
+CONFIG_NAME: private-chain-optimized
 PRESET_BASE: mainnet
 GENESIS_FORK_VERSION: 0x20000089
 GENESIS_DELAY: 0
@@ -15,10 +15,27 @@ ELECTRA_FORK_EPOCH: 18446744073709551615
 ELECTRA_FORK_VERSION: 0x20000094
 FULU_FORK_EPOCH: 18446744073709551615
 FULU_FORK_VERSION: 0x20000095
-SECONDS_PER_SLOT: 12
-SLOTS_PER_EPOCH: 32
+
+# 6 second block time
+SECONDS_PER_SLOT: 6
+SLOTS_PER_EPOCH: 8   # Reduced from 32 to 8 for faster epochs
+
 MIN_GENESIS_TIME: 0
 MIN_GENESIS_ACTIVE_VALIDATOR_COUNT: 1
 DEPOSIT_CHAIN_ID: 32382
 DEPOSIT_NETWORK_ID: 32382
 DEPOSIT_CONTRACT_ADDRESS: 0x4242424242424242424242424242424242424242
+
+# Validator settings optimized for 4 validators
+MAX_COMMITTEES_PER_SLOT: 4
+TARGET_COMMITTEE_SIZE: 4
+MAX_VALIDATORS_PER_COMMITTEE: 4
+
+# Optimized attestation aggregation
+ATTESTATION_SUBNET_COUNT: 4
+ATTESTATION_PROPAGATION_SLOT_RANGE: 8
+
+# Performance tuning
+MAX_ATTESTER_SLASHINGS: 2
+MAX_PROPOSER_SLASHINGS: 2
+MAX_VOLUNTARY_EXITS: 2
