Add deployment automation with Terraform and Ansible
- Add Terraform configs for EC2 provisioning
- Add Ansible playbook for automated setup
- Fix Docker build to use standard Dockerfile
- Add Prysm build script for multi-stage builds
- Configure git to always use HTTPS for cloning
- Remove debug.Dockerfile (not needed)
- Ignore Terraform state and provider binaries

--- a/.gitignore
+++ b/.gitignore
@@ -110,4 +110,6 @@ mdbx.lck
 /*/**/LOCK
 /*/**/nodekey
 
-.my
+.mydeployment/terraform/.terraform/
+deployment/terraform/terraform.tfstate*
+deployment/terraform/terraform.tfstate*
