--- a/deployment/ansible/playbook.yml
+++ b/deployment/ansible/playbook.yml
@@ -146,7 +146,7 @@
       become_user: ubuntu
       shell: |
         cd /home/ubuntu/erigon
-        docker-compose up -d
+        docker compose up -d
       args:
         executable: /bin/bash
 
